I fixed some bugs with my sticky footer, and a bug with the card images. On some browsers, they overflowed out of the divs, so i implemented a fix (can cause img disotrtion when the card images are taller than they are wide, but this is not the case.

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -27,7 +27,7 @@
 }
 
 .self-row{
-    padding-bottom: 2.5rem;
+    margin-bottom: 2.5rem;
 }
 
 #card-row{
@@ -45,6 +45,12 @@
 @media screen and (max-width: 768px){
     #intro-text > *{
         text-align: center;
+    }
+    .self-row{
+        margin-bottom: 0;
+    }
+    #intro-row{
+        padding-bottom: 1rem;
     }
 }
 
