--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,20 @@
 .card-img {
     display: flex;
     justify-content: center;
+    -webkit-justify-content: center;
     height: 10rem;
+
+}
+
+
+/* fix for img overflowing card-img on some browers. can cause deformation of img is to tall */
+.card-img img {
+    max-width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
+
 }
 
 
@@ -128,10 +141,8 @@ p{
 
 
 html, body{
-    height: fit-content;
-    width: fit-content;
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%;
+    width: 100%;
     background: var(--bg-normal);
 }
 
